@@ -1,180 +1,224 @@
 package com.karaoke.backend.controllers;
 
 import com.karaoke.backend.dtos.AddSongRequestDTO;
+import com.karaoke.backend.exception.SessionNotFoundException;
+import com.karaoke.backend.exception.VideoNotFoundException;
 import com.karaoke.backend.models.KaraokeSession;
+import com.karaoke.backend.models.User;
 import com.karaoke.backend.services.KaraokeService;
-import com.karaoke.backend.services.exception.SessionNotFoundException;
-import com.karaoke.backend.services.exception.VideoNotFoundException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
-import com.karaoke.backend.services.TokenService;
-import com.karaoke.backend.repositories.UserRepository; 
-import org.springframework.security.test.context.support.WithMockUser;
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
-
-
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@WebMvcTest(controllers = KaraokeController.class)
-public class KaraokeControllerTest {
+// Define a classe de teste para o Controller e suas dependências HTTP
+@WebMvcTest(KaraokeController.class)
+class KaraokeControllerTest {
 
     @Autowired
-    private MockMvc mockMvc;
+    private MockMvc mockMvc; // Usado para simular chamadas HTTP
 
     @MockBean
-    private KaraokeService service; 
+    private KaraokeService service; // Cria um Mock do Serviço para isolar o Controller
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
-    @MockBean
-    private TokenService tokenService;
-    @MockBean
-    private UserRepository userRepository;
-
-    private KaraokeSession testSession;
-    private final String SESSION_CODE = "TESTE123";
-    private final String BASE_URL = "/api/sessions";
+    private final String ACCESS_CODE = "TEST1A";
+    private KaraokeSession mockSession;
+    private User mockUser;
 
     @BeforeEach
     void setUp() {
-        testSession = new KaraokeSession();
-        testSession.setAccessCode(SESSION_CODE);
+        mockSession = new KaraokeSession();
+        mockSession.setAccessCode(ACCESS_CODE);
+        mockSession.setId(1L);
+
+        mockUser = new User();
+        mockUser.setId(99L);
+        // Nota: O @AuthenticationPrincipal injeta um mockUser quando @WithMockUser é usado
     }
 
-    @Test
-    @WithMockUser
-    void createSession_ShouldReturn201CreatedAndSession() throws Exception {
-        when(service.createSession()).thenReturn(testSession);
+    // -----------------------------------------------------------------------------------
+    // Testes para POST /api/sessions (createSession)
+    // -----------------------------------------------------------------------------------
 
-        mockMvc.perform(post(BASE_URL)
-                        .with(csrf()))
-                .andExpect(status().isCreated())
-                .andExpect(header().string("Location", BASE_URL + "/" + SESSION_CODE))
-                .andExpect(jsonPath("$.accessCode").value(SESSION_CODE));
-        
+    @Test
+    void createSession_DeveRetornar201CreatedComHeaderLocation() throws Exception {
+        // Arrange
+        when(service.createSession()).thenReturn(mockSession);
+
+        // Act & Assert
+        mockMvc.perform(post("/api/sessions")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isCreated()) // Espera status 201
+                .andExpect(header().string("Location", "/api/sessions/" + ACCESS_CODE)) // Espera o Header Location
+                .andExpect(jsonPath("$.accessCode").value(ACCESS_CODE)); // Verifica o corpo retornado
+
         verify(service, times(1)).createSession();
     }
 
+    // -----------------------------------------------------------------------------------
+    // Testes para GET /api/sessions (getAllSessions)
+    // -----------------------------------------------------------------------------------
+
     @Test
-    @WithMockUser
-    void getAllSessions_ShouldReturn200OkAndList() throws Exception {
-        KaraokeSession anotherSession = new KaraokeSession();
-        anotherSession.setAccessCode("OTHER456");
-        List<KaraokeSession> allSessions = Arrays.asList(testSession, anotherSession);
+    void getAllSessions_DeveRetornar200OkComListaDeSessoes() throws Exception {
+        // Arrange
+        List<KaraokeSession> sessions = List.of(mockSession, new KaraokeSession());
+        when(service.getAllSessions()).thenReturn(sessions);
 
-        when(service.getAllSessions()).thenReturn(allSessions);
+        // Act & Assert
+        mockMvc.perform(get("/api/sessions")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk()) // Espera status 200
+                .andExpect(jsonPath("$.length()").value(2)); // Verifica o tamanho da lista
 
-        mockMvc.perform(get(BASE_URL))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()").value(2))
-                .andExpect(jsonPath("$[0].accessCode").value(SESSION_CODE));
-        
         verify(service, times(1)).getAllSessions();
     }
 
-    @Test
-    @WithMockUser
-    void getSession_WithValidCode_ShouldReturn200OkAndSession() throws Exception {
-        when(service.getSession(eq(SESSION_CODE))).thenReturn(testSession);
+    // -----------------------------------------------------------------------------------
+    // Testes para GET /api/sessions/{sessionCode} (getSession)
+    // -----------------------------------------------------------------------------------
 
-        mockMvc.perform(get(BASE_URL + "/teste123"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.accessCode").value(SESSION_CODE));
-        
-        verify(service, times(1)).getSession(eq(SESSION_CODE));
+    @Test
+    void getSession_DeveRetornar200Ok_QuandoSessaoEncontrada() throws Exception {
+        // Arrange
+        when(service.getSession(ACCESS_CODE)).thenReturn(mockSession);
+
+        // Act & Assert
+        mockMvc.perform(get("/api/sessions/" + ACCESS_CODE)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk()) // Espera status 200
+                .andExpect(jsonPath("$.accessCode").value(ACCESS_CODE));
+
+        verify(service, times(1)).getSession(ACCESS_CODE);
     }
 
     @Test
-    @WithMockUser
-    void getSession_WithInvalidCode_ShouldReturn404NotFound() throws Exception {
-        final String INVALID_CODE = "INVALID404";
-        
-        when(service.getSession(eq(INVALID_CODE))).thenThrow(new SessionNotFoundException("Sessão não encontrada."));
+    void getSession_DeveRetornar404NotFound_QuandoSessaoNaoEncontrada() throws Exception {
+        // Arrange
+        when(service.getSession(ACCESS_CODE)).thenThrow(new SessionNotFoundException("Sessão não existe."));
 
-        mockMvc.perform(get(BASE_URL + "/" + INVALID_CODE))
-                .andExpect(status().isNotFound())
-                .andExpect(content().string("Sessão não encontrada."));
-        
-        verify(service, times(1)).getSession(eq(INVALID_CODE));
+        // Act & Assert
+        // Se a exceção SessionNotFoundException não for tratada por um @ControllerAdvice,
+        // o Spring geralmente retorna 500. No entanto, em um ambiente real, você esperaria
+        // um 404 (Not Found) para exceções de "não encontrado".
+        // Assumindo que você tem um tratamento para 404 no seu projeto:
+        // Se não tiver tratamento, mude para .andExpect(status().isInternalServerError()) ou
+        // implemente o tratamento de exceções. Vamos manter o 404 como ideal.
+        mockMvc.perform(get("/api/sessions/" + ACCESS_CODE))
+                .andExpect(status().isNotFound()); // Idealmente, 404 para não encontrado
+
+        verify(service, times(1)).getSession(ACCESS_CODE);
     }
 
+    // -----------------------------------------------------------------------------------
+    // Testes para POST /api/sessions/{sessionCode}/queue (addSongToQueue)
+    // -----------------------------------------------------------------------------------
+
     @Test
-    @WithMockUser 
-    void addSongToQueue_ShouldReturn200Ok() throws Exception {
-        final String SONG_TITLE = "Nome da Musica para Karaokê";
-        final String USER_ID = "user123";
-        final String USER_NAME = "João";
-        
-        // 1. Mock do comportamento do Service (ele não deve lançar exceção)
-        doNothing().when(service).addSongToQueue(eq(SESSION_CODE), any(), any(), any());
+    @WithMockUser(username = "testUser") // Simula um usuário autenticado
+    void addSongToQueue_DeveRetornar201Created_QuandoAdicionadoComSucesso() throws Exception {
+        // Arrange
+        String songTitle = "Bohemian Rhapsody";
+        AddSongRequestDTO requestDTO = new AddSongRequestDTO(songTitle);
 
-        // 2. Cria o DTO de Requisição usando o novo campo: songTitle
-        AddSongRequestDTO requestDTO = new AddSongRequestDTO();
-        requestDTO.setSongTitle(SONG_TITLE); // <-- MUDANÇA: SETA O TÍTULO
-        requestDTO.setUserId(USER_ID);
-        requestDTO.setUserName(USER_NAME);
+        // Mock do corpo da requisição
+        String requestBody = "{\"songTitle\": \"" + songTitle + "\"}";
 
-        mockMvc.perform(post(BASE_URL + "/" + SESSION_CODE + "/queue")
+        // Não precisamos simular o retorno, apenas que o serviço é chamado
+        doNothing().when(service).addSongToQueue(eq(ACCESS_CODE), eq(songTitle), any(User.class));
+
+        // Act & Assert
+        mockMvc.perform(post("/api/sessions/" + ACCESS_CODE + "/queue")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(requestDTO))
-                        .with(csrf()))
-                .andExpect(status().isOk());
-        
-        // 3. Verifica se o Service foi chamado com os argumentos CORRETOS
+                        .content(requestBody))
+                .andExpect(status().isCreated()); // Espera status 201
+
+        // Verifica se o serviço foi chamado com os argumentos corretos
         verify(service, times(1)).addSongToQueue(
-            eq(SESSION_CODE), 
-            eq(SONG_TITLE), // <-- MUDANÇA: Espera o TÍTULO aqui
-            eq(USER_ID), 
-            eq(USER_NAME)
+                eq(ACCESS_CODE),
+                eq(songTitle),
+                any(User.class) // O MockMvc injeta um objeto User mockado
         );
     }
 
     @Test
-    @WithMockUser
-    void addSongToQueue_ShouldReturn404NotFound_WhenVideoIsNotValid() throws Exception {
-        final String SONG_TITLE = "Musica Invalida";
-        
-        // 1. Mock para simular a falha na busca/validação do vídeo
-        doThrow(new VideoNotFoundException("Vídeo não encontrado/incorporável."))
-                .when(service).addSongToQueue(eq(SESSION_CODE), any(), any(), any());
+    @WithMockUser(username = "testUser")
+    void addSongToQueue_DeveRetornar404NotFound_QuandoSessaoNaoExiste() throws Exception {
+        // Arrange
+        String songTitle = "Some Song";
+        String requestBody = "{\"songTitle\": \"" + songTitle + "\"}";
 
-        // 2. Cria o DTO de Requisição
-        AddSongRequestDTO requestDTO = new AddSongRequestDTO();
-        requestDTO.setSongTitle(SONG_TITLE);
-        requestDTO.setUserId("user123");
-        requestDTO.setUserName("João");
+        // Simula a exceção lançada pelo serviço
+        doThrow(new SessionNotFoundException("Sessão inexistente.")).when(service)
+                .addSongToQueue(eq(ACCESS_CODE), eq(songTitle), any(User.class));
 
-        // 3. Executa a requisição
-        mockMvc.perform(post(BASE_URL + "/" + SESSION_CODE + "/queue")
+        // Act & Assert
+        mockMvc.perform(post("/api/sessions/" + ACCESS_CODE + "/queue")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(requestDTO))
-                        .with(csrf()))
-                .andExpect(status().isNotFound()) // Espera 404 (do @ExceptionHandler)
-                .andExpect(content().string("Vídeo não encontrado/incorporável.")); // Verifica a mensagem de erro
-
-        // 4. Verifica se o Service foi chamado
-        verify(service, times(1)).addSongToQueue(
-            eq(SESSION_CODE), 
-            eq(SONG_TITLE), 
-            any(), 
-            any()
-        );
+                        .content(requestBody))
+                .andExpect(status().isNotFound()); // Idealmente, 404
     }
 
+    @Test
+    @WithMockUser(username = "testUser")
+    void addSongToQueue_DeveRetornar404NotFound_QuandoVideoNaoEncontrado() throws Exception {
+        // Arrange
+        String songTitle = "Bad Song";
+        String requestBody = "{\"songTitle\": \"" + songTitle + "\"}";
+
+        // Simula a exceção VideoNotFoundException
+        doThrow(new VideoNotFoundException("Vídeo não encontrado.")).when(service)
+                .addSongToQueue(eq(ACCESS_CODE), eq(songTitle), any(User.class));
+
+        // Act & Assert
+        mockMvc.perform(post("/api/sessions/" + ACCESS_CODE + "/queue")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(requestBody))
+                .andExpect(status().isNotFound()); // Um 404 ou 400 (Bad Request) seria apropriado
+    }
+
+    // -----------------------------------------------------------------------------------
+    // Testes para DELETE /api/sessions/{sessionCode} (endSession)
+    // -----------------------------------------------------------------------------------
+
+    @Test
+    void endSession_DeveRetornar204NoContent_QuandoFinalizadaComSucesso() throws Exception {
+        // Arrange
+        doNothing().when(service).endSession(ACCESS_CODE);
+
+        // Act & Assert
+        mockMvc.perform(delete("/api/sessions/" + ACCESS_CODE))
+                .andExpect(status().isNoContent()); // Espera status 204
+
+        verify(service, times(1)).endSession(ACCESS_CODE);
+    }
+
+    // -----------------------------------------------------------------------------------
+    // Testes para DELETE /api/sessions/{sessionCode}/queue/{queueItemId} (deleteSongFromQueue)
+    // -----------------------------------------------------------------------------------
+
+    @Test
+    void deleteSongFromQueue_DeveRetornar204NoContent() throws Exception {
+        // Arrange
+        Long queueItemId = 123L;
+        doNothing().when(service).deleteSongFromQueue(ACCESS_CODE, queueItemId);
+
+        // Act & Assert
+        mockMvc.perform(delete("/api/sessions/" + ACCESS_CODE + "/queue/" + queueItemId))
+                .andExpect(status().isNoContent()); // Espera status 204
+
+        verify(service, times(1)).deleteSongFromQueue(ACCESS_CODE, queueItemId);
+    }
 }
-
